pod1.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pod1
  labels:
    myapp: pod1

spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80

      volumeMounts:
        - name: my-storage
          mountPath: /usr/share/nginx/html

  volumes:
    - name: my-storage
      persistentVolumeClaim:
        claimName: my-pvc
