pod2.yaml
apiVersion: v1
kind: Pod

metadata:
  name: firefox
  labels:
    firefox: pod2

spec:
  containers:
    - name: firefox
      image: linuxserver/firefox
      ports:
        - containerPort: 3000
