networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-firefox-to-nginx

spec:
  podSelector:
    matchLabels:
      myapp: pod1

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              myapp: pod1
